--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -4,7 +4,7 @@
 # -------------------------------------------------------------------------------------
 
 title = "Hugo FixIt Blog"
-baseURL = "https://hugo-fixit.github.io/hugo-fixit-starter1/"
+baseURL = "https://johanchane.github.io/my-blog"
 theme = [
   "FixIt",
   "shortcode-docs-bookmark"
